--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -15,7 +15,7 @@
 		</p>
 	</div>
 
-    <h2 class="h1 mt-3 mb-4">Nos appartements stars</h2>
+    <h2 class="h1 my-5">Nos appartements stars</h2>
     <div class="row"> 
         <div class="col-md-4">
             <div class="card bg-light mb-3">
@@ -33,7 +33,7 @@
                     <a href="#" class="btn btn-secondary"> en savoir plus !</a>
                 </div>
 
-            </div>
+            </div> 
         </div>
 
                 <div class="col-md-4">
@@ -51,7 +51,6 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos sint iusto suscipit eveniet blanditiis incidunt excepturi beatae nihil esse odio.</p>
                     <a href="#" class="btn btn-secondary"> en savoir plus !</a>
                 </div>
-
             </div>
         </div>
 
@@ -77,7 +76,7 @@
 
     </div>
 
-    <h2 class="h1 mt-3 mb-4">Nos hôtes stars</h2>
+    <h2 class="h1 my-5">Nos hôtes stars</h2>
     <div class="row">
         <div class="col">
             <div class="card border-secondary mb-3">
