--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -5,21 +5,15 @@
 {% block body %}
 
 <div class="container">
+    <h1 class="my-5">Changement du Mot de passe!</h1>
 
-    <div class="row">
-        <div class="col-md-3">&nbsp;</div>
-        <div class="col-md-6">
-            <div class="bg-primary p-3">
-                <h1>Changement du Mot de passe!</h1>
-                    {{ form_start(form) }}
-                    {{ form_widget(form) }}
-                    <p class="text-center">
-                        <button type="submit" class="btn btn-lg btn-primary">Modifier le mot de passe</button>
-                    </p>
-                    {{ form_end(form) }}
-            </div>
-        </div>
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
 
-    </div>
+    <p class="text-center">
+        <button type="submit" class="btn btn-lg btn-primary"> <i class="fas fa-check"></i> Modifier le mot de passe</button>
+    </p>
+    {{ form_end(form) }}
+
 </div>
 {% endblock %}
