--- a/templates/account/register.html.twig
+++ b/templates/account/register.html.twig
@@ -5,21 +5,42 @@
 {% block body %}
 
 <div class="container">
-
+    <h1 class="my-5">Inscrivez-vous !</h1>
+    {{ form_start(form) }}
     <div class="row">
-        <div class="col-md-3">&nbsp;</div>
-        <div class="col-md-6">
-            <div class="bg-primary p-3">
-                <h1>Inscrivez-vous !</h1>
-                    {{ form_start(form) }}
-                    {{ form_widget(form) }}
-                    <p class="text-center">
-                        <input type="submit" value="Je m'inscris" class="btn btn-lg btn-primary">
-                    </p>
-                    {{ form_end(form) }}
+        <div class="col">
+            <div class="alert alert-light">
+                <h2 class="alert-heading">Informations Générales</h2>
+                <hr>
+                {{form_row(form.firstName)}}
+                {{form_row(form.lastName)}}
+                {{form_row(form.email)}}
+                {{form_row(form.picture)}}
             </div>
         </div>
+        <div class="col">
+            <div class="alert alert-light">
+                <h2 class="alert-heading">Mot de passe</h2>
+                <hr>
+                {{ form_row(form.hash ) }}
+                {{ form_row(form.confirmPassword) }}
+            </div>
 
+            <div class="alert alert-light">
+                <h2 class="alert-heading">Détails</h2>
+                <hr>
+                {{form_row(form.introduction)}}
+                {{form_row(form.description)}}
+
+                <hr>
+                <p>Pour valider vos modifications, cliquez sur le bouton "Sauvegarder"</p>
+                <button type="submit" class="btn btn-lg btn-success"> <i class="fas fa-check"></i>Confirmer l'inscription</button>
+            </div>
+        </div>
     </div>
+    <p class="text-center">
+    </p>
+    
+    {{ form_end(form) }}
 </div>
 {% endblock %}
