--- a/templates/ad/_collection.html.twig
+++ b/templates/ad/_collection.html.twig
@@ -6,7 +6,10 @@
 <input type="hidden" id="widgets-counter" value="0">
 
 <div class="form-group">
-    <button type="button" id="add-image" class="btn btn-primary">Ajoutez une image</button>
+    <button type="button" id="add-image" class="btn btn-primary">
+        <i class="fas fa-plus"></i>
+        Ajoutez une image
+    </button>
 </div>
 {% endblock _ad_images_widget %}
 
