--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -9,15 +9,45 @@
 {% form_theme form 'ad/_collection.html.twig' %}
 
 <div class="container">
-    <h1> Créez votre annonce </h1>
+    <h1 class="my-5"> Créez votre annonce </h1>
 
     {{ form_start(form) }}
 
-    {{ form_widget(form) }}
+    <div class="row">
+        <div class="col">
+            <div class="alert alert-light">
+                <h2>Informations Générales</h2>
+                <hr>
+                {{form_row(form.title)}}
+                {{form_row(form.slug)}}
+                {{form_row(form.price)}}
+                {{form_row(form.rooms)}}
+            </div>
+            <div class="alert alert-light">
+                <h2>Détails de l'annonce</h2>
+                <hr>
+                {{form_row(form.introduction)}}
+                {{form_row(form.content)}}
+            </div>
+        </div>
+        <div class="col">
+            <div class="alert alert-light">
+                <h2>Image de l'annonce</h2>
+                <hr>
+                {{form_row(form.coverImage)}}
+                {{form_row(form.images)}}
+            </div>
+        </div>
+    </div>
+</div>
 
-    <button type="submit" class="btn btn-primary">Créer la nouvelle annonce </button>
+<div class="alert alert-success clearfix container">
+    <h2 class="alert alert-heading">Sauvegarder votre annonce :</h2>
+    <p>Vous êtes sur le point de crée une annonce de rêve. Faites rêver vos futurs voyageurs !</p>
+    <button type="submit" class="btn btn-primary float-right">Créer la nouvelle annonce <i class="fas fa-check"></i> </button>
+</div>
 
-    {{ form_end(form) }}
+{{ form_end(form) }}
 </div>
 
 {% endblock %}
