--- a/templates/account/bookings.html.twig
+++ b/templates/account/bookings.html.twig
@@ -16,7 +16,7 @@
     {% for booking in app.user.bookings %}
     {% set ad = booking.ad %}
         <div class="row my-4">
-            <div class="col-4">
+            <div class="col-md-4">
                 <img src="{{ ad.coverImage }}" alt="image de {{ ad.title }}" class="img-fluid">
                 <div class="mt-1">
                     {% set comment = ad.commentFromAuthor(app.user) %}
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <div class="col-8">
+            <div class="col-md-8">
                 <h4>{{ ad.title }}</h4>
                 <p>
                     Réservation <strong>n°{{booking.id}}</strong><br>
