create admin Ad space for manage ad

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -40,6 +40,11 @@ div.carousel-caption {
     max-width: 24px;
 }
 
+.avatar-micro {
+    max-height: 12px;
+    max-width: 12px;
+}
+
 .datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
     color:firebrick !important ;
 }
