--- a/templates/admin/includes/header.html.twig
+++ b/templates/admin/includes/header.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="{{path('homePage')}}">SymfoBNB !</a>
+	<a class="navbar-brand" href="{{path('homePage')}}">ADMINISTRATION</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
 		aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -8,36 +8,49 @@
 	<div class="collapse navbar-collapse" id="navbarColor01">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="{{path('homePage')}}">Acceuil</a>
+				<a class="nav-link" href="#">
+                    <i class="fas fa-chart-line"></i>
+                    Dashboard
+                </a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="{{path('ads_index')}}">Annonces</a>
+				<a class="nav-link" href="{{path('admin_ads_index')}}">
+                    <i class="fas fa-hotel"></i>
+                    Annonces
+                </a>
+			</li>
+			<li class="nav-item">
+                <a class="nav-link" href="#">
+                    <i class="fas fa-folder"></i>
+                    Reservations
+                </a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">
+                    <i class="fas fa-comments"></i>
+                    Commentaires
+                </a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">
+                    <i class="fas fa-users"></i>
+                    Utilisateurs
+                </a>
 			</li>
 		</ul>
 		<ul class="navbar-nav ml-auto">
-			{% if not app.user %}
-			<li class="nav-item">
-				<a class="nav-link" href="{{ path('account_register') }}">Inscription</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{{ path('account_login') }}">Connexion</a>
-			</li>
-			{% elseif app.user %}
+            <li class="nav-item">
+                <a href="{{path('homePage')}}" target="_blank" class="nav-link">
+                    <i class="fas fa-eye"></i>
+                    Voir le site
+                </a>
+            </li>
+			{% if app.user %}
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="accountDropdownLink">
 					<img src="{{app.user.picture}}" class="avatar avatar-mini mr-2" alt="avatar de {{app.user.fullName}}"> {{app.user.fullName}}
 				</a>
 				<div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
-
-					<a href="{{ path('ads_new') }}" class="dropdown-item">créé une annonce</a>
-
-					<div class="dropdown-divider"></div>
-
-					<a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
-					<a href="{{ path('account_booking') }}" class="dropdown-item">Mes Reservations</a>
-					<a href="{{ path('account_profil') }}" class="dropdown-item">Modifier mon profil</a>
-
-					<div class="dropdown-divider"></div>
 
 					<a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
 					
