--- a/templates/admin/includes/header.html.twig
+++ b/templates/admin/includes/header.html.twig
@@ -52,7 +52,7 @@
 				</a>
 				<div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
 
-					<a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
+					<a href="{{ path('admin_account_logout') }}" class="dropdown-item">Déconnexion</a>
 					
 				</div>
 			</li>
