--- a/templates/admin/ad/index.html.twig
+++ b/templates/admin/ad/index.html.twig
@@ -29,7 +29,7 @@
                     <span class="badge badge-primary rounded">{{ ad.avgRatings|number_format(1) }}</span>
                 </td>
                 <td>
-                    <a href="" class="btn btn-primary"><i class="fas fa-edit"></i> </a>
+                    <a href="{{path('admin_ads_edit', {'id': ad.id })}}" class="btn btn-primary"><i class="fas fa-edit"></i> </a>
                     <a href="" class="btn btn-danger"><i class="fas fa-trash"></i></a>
                 </td>
             </tr>        
