--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -15,7 +15,7 @@
 
 
     {% include "admin/includes/header.html.twig" %}
-    {# {% include "admin/includes/flash.html.twig" %} #}
+    {% include "/includes/flash.html.twig" %}
 
     {% block body %}{% endblock %}
 
