--- a/templates/admin/comment/index.html.twig
+++ b/templates/admin/comment/index.html.twig
@@ -25,7 +25,7 @@
                 <td> <span class="badge bagde-dark"> {{comment.rating}} </span></td>
                 <td>{{comment.ad.title}}</td>
                 <td>
-                    <a href="" class="btn btn-primary">
+                    <a href="{{path('admin_comments_edit', {'id': comment.id})}}" class="btn btn-primary">
                         <i class="fas fa-pen"></i>
                     </a>
                     <a href="" class="btn btn-danger">
