--- a/templates/admin/comment/index.html.twig
+++ b/templates/admin/comment/index.html.twig
@@ -28,7 +28,7 @@
                     <a href="{{path('admin_comments_edit', {'id': comment.id})}}" class="btn btn-primary">
                         <i class="fas fa-pen"></i>
                     </a>
-                    <a href="" class="btn btn-danger">
+                    <a href="{{path('admin_comments_delete', {'id': comment.id})}}" class="btn btn-danger">
                         <i class="fas fa-trash"></i>
                     </a>
                 </td>
