--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -21,7 +21,7 @@
                 <td> <img src="{{booking.booker.picture}}" alt="" class="avatar avatar-mini"> {{booking.booker.fullName}}</td>
                 <td>{{booking.ad.title}}</td>
                 <td>
-                    <a href="" class="btn btn-primary">
+                    <a href="{{path('admin_booking_edit', {'id': booking.id})}}" class="btn btn-primary">
                         <i class="fas fa-pen"></i>
                     </a>
                     <a href="" class="btn btn-danger">
