--- a/templates/admin/booking/edit.html.twig
+++ b/templates/admin/booking/edit.html.twig
@@ -4,7 +4,23 @@
 
 {% block body %}
 <div class="container-fluid">
-    <h1 class="my-5">Gerer une reservations</h1>
-    {{form(form)}}
+    <h1 class="my-5">Gerer la reservation n°{{booking.id}}</h1>
+    {{form_start(form)}}
+    <div class="row">
+        <div class="col">
+            {{form_row(form.startDate)}}
+            {{form_row(form.endDate)}}
+            {{form_row(form.comment)}}
+        </div>
+        
+        <div class="col">
+            {{form_row(form.booker)}}
+            {{form_row(form.ad)}}
+            <button type="submit" class="btn btn-success">
+                <i class="fas fa-check"></i>
+                Enregistrer les modifications
+            </button>
+        </div>
+    </div>
 </div>
 {% endblock %}
