--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -11,6 +11,8 @@
             <th>Date</th>
             <th>visiteur</th>
             <th>Annonce</th>
+            <th>Durée</th>
+            <th>Montant</th>
             <th></th>
         </thead>
         <tbody>
@@ -20,6 +22,8 @@
                 <td>{{booking.createdAt|date('d/m/Y H:i')}}</td>
                 <td> <img src="{{booking.booker.picture}}" alt="" class="avatar avatar-mini"> {{booking.booker.fullName}}</td>
                 <td>{{booking.ad.title}}</td>
+                <td>{{booking.days|length}}</td>
+                <td>{{booking.amount}}</td>
                 <td>
                     <a href="{{path('admin_booking_edit', {'id': booking.id})}}" class="btn btn-primary">
                         <i class="fas fa-pen"></i>
