function delete for admin can delete a booking

--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -28,7 +28,7 @@
                     <a href="{{path('admin_booking_edit', {'id': booking.id})}}" class="btn btn-primary">
                         <i class="fas fa-pen"></i>
                     </a>
-                    <a href="" class="btn btn-danger">
+                    <a href="{{path('admin_booking_delete', {'id': booking.id})}}" class="btn btn-danger">
                         <i class="fas fa-trash"></i>
                     </a>
                 </td>
