pagination in admin_ads_index

--- a/templates/admin/ad/index.html.twig
+++ b/templates/admin/ad/index.html.twig
@@ -21,7 +21,8 @@
             <tr>
                 <td>{{ ad.id }}</td>
                 <td>{{ ad.title }}</td>
-                <td> <img src="{{ad.author.picture }}" alt="avatar de {{ad.author.fullName}}" class="avatar avatar-mini mr-2"> {{ ad.author.fullName }}</td>
+                <td> <img src="{{ad.author.picture }}" alt="avatar de {{ad.author.fullName}}"
+                        class="avatar avatar-mini mr-2"> {{ ad.author.fullName }}</td>
                 <td class="text-center">
                     <span class="badge badge-primary rounded">{{ ad.bookings|length }}</span>
                 </td>
@@ -29,12 +30,29 @@
                     <span class="badge badge-primary rounded">{{ ad.avgRatings|number_format(1) }}</span>
                 </td>
                 <td>
-                    <a href="{{path('admin_ads_edit', {'id': ad.id })}}" class="btn btn-primary"><i class="fas fa-edit"></i> </a>
-                    <a href="{{path('admin_ads_delete', {'id': ad.id })}}" class="btn btn-danger"><i class="fas fa-trash"></i></a>
+                    <a href="{{path('admin_ads_edit', {'id': ad.id })}}" class="btn btn-primary"><i
+                            class="fas fa-edit"></i> </a>
+                    <a href="{{path('admin_ads_delete', {'id': ad.id })}}" class="btn btn-danger"><i
+                            class="fas fa-trash"></i></a>
                 </td>
-            </tr>        
+            </tr>
             {% endfor %}
         </tbody>
     </table>
+    <div class="d-flex justify-content-center">
+        <ul class="pagination">
+            <li class="page-item {% if page == 1 %} disabled {% endif %}">
+                <a class="page-link" href="{{path('admin_ads_index', {'page': page - 1})}}">&laquo;</a>
+            </li>
+            {% for i in 1..pages %}
+            <li class="page-item {% if page == i %} active {% endif %}">
+                <a class="page-link" href="{{path('admin_ads_index', {'page': i})}}">{{i}}</a>
+            </li>
+            {% endfor %}
+            <li class="page-item {% if page == pages %} disabled {% endif %}">
+                <a class="page-link" href="{{path('admin_ads_index', {'page': page + 1})}}">&raquo;</a>
+            </li>
+        </ul>
+    </div>
 </div>
 {% endblock %}
