--- a/templates/admin/comment/index.html.twig
+++ b/templates/admin/comment/index.html.twig
@@ -16,7 +16,7 @@
             <th>Action</th>
         </thead>
         <tbody>
-            {% for comment in comments %}
+            {% for comment in pagination.data %}
             <tr>
                 <td>{{comment.id}}</td>
                 <td>{{comment.createdAt|date('d/m/Y H:i')}}</td>
@@ -36,5 +36,7 @@
             {% endfor %}
         </tbody>
     </table>
+    {% include "admin/includes/pagination.html.twig" with {'route': 'admin_comments_index'} %}
+
 </div>
 {% endblock %}
