--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -16,7 +16,7 @@
             <th></th>
         </thead>
         <tbody>
-            {% for booking in bookings %}
+            {% for booking in pagination.data %}
             <tr>
                 <td>{{booking.id}}</td>
                 <td>{{booking.createdAt|date('d/m/Y H:i')}}</td>
@@ -36,5 +36,6 @@
             {% endfor %}
         </tbody>
     </table>
+    {% include "admin/includes/pagination.html.twig" with {'route': 'admin_booking_index'} %}
 </div>
 {% endblock %}
