--- a/templates/admin/ad/index.html.twig
+++ b/templates/admin/ad/index.html.twig
@@ -39,6 +39,6 @@
             {% endfor %}
         </tbody>
     </table>
-    {% include "admin/includes/pagination.html.twig" with {'route': 'admin_ads_index'} %}
+    {{pagination.display}}
 </div>
 {% endblock %}
