--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -36,6 +36,6 @@
             {% endfor %}
         </tbody>
     </table>
-    {% include "admin/includes/pagination.html.twig" with {'route': 'admin_booking_index'} %}
+    {{pagination.display}}
 </div>
 {% endblock %}
