--- a/templates/admin/dashboard/index.html.twig
+++ b/templates/admin/dashboard/index.html.twig
@@ -14,7 +14,7 @@
                             <i class="fas fa-users fa-3x"></i>
                         </div>
                         <div class="col-8">
-                            <h4 class="card-title">100 utilisateurs</h4>
+                            <h4 class="card-title">{{stats.users}} utilisateurs</h4>
                         </div>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                             <i class="fas fa-hotel fa-3x"></i>
                         </div>
                         <div class="col-8">
-                            <h4 class="card-title">50 Annonces</h4>
+                            <h4 class="card-title">{{stats.ads}} Annonces</h4>
                         </div>
                     </div>
                 </div>
@@ -37,18 +37,18 @@
         </div>
 
         <div class="col">
-        <div class="card text-white bg-warning mb-3 text-center">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-4">
-                        <i class="fas fa-folder fa-3x"></i>
-                    </div>
-                    <div class="col-8">
-                        <h4 class="card-title">120 Reservations</h4>
+            <div class="card text-white bg-warning mb-3 text-center">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-4">
+                            <i class="fas fa-folder fa-3x"></i>
+                        </div>
+                        <div class="col-8">
+                            <h4 class="card-title">{{stats.bookings}} Reservations</h4>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
 
         <div class="col">
@@ -59,13 +59,75 @@
                             <i class="fas fa-folder fa-3x"></i>
                         </div>
                         <div class="col-8">
-                            <h4 class="card-title">250 Avis</h4>
+                            <h4 class="card-title">{{stats.comments}} Avis</h4>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <div class="alert alert-success">
+                <h2 class="alert alert-heading my-3"> <i class="fas fa-arrow-up"></i>  Les annonces populaires</h2>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Annonce</th>
+                            <th>Propriétaire</th>
+                            <th>Moyenne</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for ad in bestAds %} 
+                        <tr>
+                            <td>{{ad.title}}</td>
+                            <td>
+                                <img src="{{ad.picture}}" alt="Avatar de {{ad.firstName}} {{ad.lastName}}" class="avatar avatar-micro">
+                                {{ad.firstName}} {{ad.lastName}}
+                            </td>
+                            <td class="text-center">
+                                <span class="badge badge-dark">
+                                    {{ad.note|number_format(1, ",", " ")}}
+                                </span>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="col">
+            <div class="alert alert-warning">
+                <h2 class="alert alert-heading my-3"> <i class="fas fa-arrow-up"></i> Les Annonces à ameliorer</h2>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Annonce</th>
+                            <th>Propriétaire</th>
+                            <th>Moyenne</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for ad in badAds %} 
+                        <tr>
+                            <td>{{ad.title}}</td>
+                            <td>
+                                <img src="{{ad.picture}}" alt="Avatar de {{ad.firstName}} {{ad.lastName}}" class="avatar avatar-micro">
+                                {{ad.firstName}} {{ad.lastName}}
+                            </td>
+                            <td class="text-center">
+                                <span class="badge badge-dark">
+                                    {{ad.note|number_format(1, ",", " ")}}
+                                </span>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
