--- a/templates/admin/includes/header.html.twig
+++ b/templates/admin/includes/header.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="{{path('homePage')}}">ADMINISTRATION</a>
+	<a class="navbar-brand" href="{{path('admin_dashboard')}}">ADMINISTRATION</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
 		aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -8,7 +8,7 @@
 	<div class="collapse navbar-collapse" id="navbarColor01">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="#">
+				<a class="nav-link" href="{{path('admin_dashboard')}}">
                     <i class="fas fa-chart-line"></i>
                     Dashboard
                 </a>
