move CSS file in Folder 'Asset'

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,58 @@
-body {
-    background-color: lightgray;
+div.container, div.container-fluid {
+    margin-top: 20px;
+}
+
+div.ad-titre {
+    padding: 2em;
+    background-size: cover;
+    background-position: center center;
+}
+
+div.ad-titre h1,
+div.ad-titre p {
+    color: white;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+}
+
+div.ad-titre .btn{ 
+    margin-top: 2em;
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
+
+div.carousel-caption {
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+}
+
+.avatar {
+    max-width: 128px;
+    max-height: 128px;
+    border-radius: 50%;
+}
+
+.avatar-medium {
+    max-height: 64px;
+    max-width: 64px;
+}
+
+.avatar-mini {
+    max-height: 24px;
+    max-width: 24px;
+}
+
+.avatar-micro {
+    max-height: 12px;
+    max-width: 12px;
+}
+
+.datepicker table tr td.disabled, .datepicker table tr td.disabled:hover {
+    color:firebrick !important ;
+}
+
+span.rating i.fas, span.rating i.far{
+    color: goldenrod !important;
+}
+
+.alert a{
+    text-decoration: none;
 }
